优化打包逻辑
1， 优化名字空间，Editor相关代码放到 XAsset.Editor 下
2，优化打包流程，先对共享资源进行打包，然后再逐规则打包
3，打包规则支持配表，参考 XAsset/Assets/Rules.ini
4，iOS出包Build Player 默认指定 /iOS

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ sysinfo.txt
 XAsset/Library
 XAsset/Temp
 XAsset/UnityPackageManager
+XAsset/.vscode/settings.json
+*.mdb
+XAsset/obj/Debug/Assembly-CSharp.dll
+XAsset/obj/Debug/Assembly-CSharp.csproj.FilesWrittenAbsolute.txt
+XAsset/obj/Debug/Assembly-CSharp-Editor.dll
+XAsset/obj/Debug/Assembly-CSharp-Editor.csproj.FilesWrittenAbsolute.txt
+.DS_Store
