增加图集打包逻辑

--- a/XAsset/Assets/Rules.ini
+++ b/XAsset/Assets/Rules.ini
@@ -4,3 +4,8 @@ searchPattern=*.prefab
 searchOption=AllDirectories
 bundleName=
 
+[BuildAssetsWithAssetBundleName]
+searchPath=Assets/SampleAssets
+searchPattern=*.png
+searchOption=AllDirectories
+bundleName=sprites
