--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ Temp
 DLC
 UnityPackageManager
 *.mdb
+Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Repacked.dll.meta
+Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Repacked.dll
+Assets/Plugins/Editor/JetBrains.meta
+Assets/Plugins/Editor.meta
+Assets/Plugins.meta
