--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "xasset.github.io",
-    "version": "7.2",
+    "name": "xasset.os",
+    "version": "2022",
     "displayName": "xasset",
-    "description": "开箱即用的 Unity 分包，加密和热更技术。加快你的 Unity 项目的迭代速度和减少用户等待时间，并为程序运行时的流畅度和稳定性带来更多保障。",
+    "description": "让 Unity 快速打包和运行",
     "unity": "2018.4",
     "unityRelease": "36f1",
-    "documentationUrl": "xasset.github.io",
-    "changelogUrl": "https://xasset.github.io/changes",
+    "documentationUrl": "https://xasset.pro/docs/about",
+    "changelogUrl": "https://xasset.pro/changes",
     "licensesUrl": "https://github.com/xasset/xasset/blob/main/LICENSE.md",
     "dependencies": {},
     "keywords": [
