--- a/Assets/xasset/Samples/Scritps/xasset.samples.asmdef
+++ b/Assets/xasset/Samples/Scritps/xasset.samples.asmdef
@@ -1,6 +1,15 @@
 {
-  "name": "xasset.demo",
-  "references": [
-    "xasset"
-  ]
+    "name": "xasset.samples",
+    "references": [
+        "xasset"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
