--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /[Bb]uilds/
 /[Bb]undles/
 /[Bb]undlesCache/
+/Assets/StreamingAssets*
 /Assets/AssetStoreTools*
 
 # Visual Studio 2015 cache directory
