--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ide.rider": "3.0.16",
+    "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.test-framework": "1.1.31",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
