提交xasset 支持FileRequest (File 编辑器下直接读文件 非编辑器下打AB)

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /[Bb]undlesCache/
 /Assets/StreamingAssets*
 /Assets/AssetStoreTools*
+/UserSettings/
 
 # Visual Studio 2015 cache directory
 /.vs/
